--- a/public/main.css
+++ b/public/main.css
@@ -1,6 +1,16 @@
+/* font-family: 'Staatliches', cursive;
+font-family: 'Open Sans Condensed', sans-serif; */
+
 body {
 margin:40px 20px 40px 20px;
+background-color: #f6f6f6;
+}
 
+.navbar {
+    display:flex;
+    justify-content: center;
+    font-family: 'Staatliches', cursive;
+    font-size: 48px;
 }
 
 .phone-images {
@@ -14,5 +24,58 @@ margin:40px 20px 40px 20px;
     align-items: center;
     margin:auto;
     width: 60%;
-
+    border: 1px solid;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 15px;
+    background-color: white;
 }
+
+.article-content{
+    border-top: 2px solid #f6f6f6;
+    border-bottom: 2px solid #f6f6f6;
+    padding-top:30px;
+    padding-bottom: 30px;
+} 
+
+.likes-img {
+    height: 17px;
+    width:17px;
+    margin-right:5px;
+}
+
+.calendar-img {
+    height:17px;
+    width:17px;
+    margin-right: 5px;
+}
+
+.pencil-img{
+    height: 17px;
+    width: 17px;
+    margin-right:5px;
+}
+
+
+.authorDateLike-container{
+    display:flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    text-decoration: none;
+}   
+
+h1 {
+    font-family: 'Staatliches', cursive;
+}
+
+h2 {
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    margin-bottom: 25px;
+}
+
+p {
+    font-family: 'Open Sans Condensed', sans-serif; 
+}
+
