--- a/public/main.css
+++ b/public/main.css
@@ -2,8 +2,8 @@
 font-family: 'Open Sans Condensed', sans-serif; */
 
 body {
-margin:40px 20px 40px 20px;
-background-color: #f6f6f6;
+    margin:40px 20px;
+    background-color: #f6f6f6;
 }
 
 .navbar {
@@ -34,8 +34,7 @@ background-color: #f6f6f6;
 .articleContent{
     border-top: 2px solid #f6f6f6;
     border-bottom: 2px solid #f6f6f6;
-    padding-top:30px;
-    padding-bottom: 30px;
+    padding: 30px 0;
 } 
 
 .likesImage, .calendarImage, .pencilImage {
